--- a/.gitignore
+++ b/.gitignore
@@ -10,17 +10,48 @@ env/
 # Python cache
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
 
 # Build artifacts
 *.egg-info/
-green_white_agent.egg-info/
+*.egg
+dist/
+build/
+pip-log.txt
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
 
-white_agent/__pycache__/
-white_agent/__pycache__/agent.cpython-313.pyc
+# Test artifacts
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# SSL certificates (generated)
+*.pem
+*.key
+*.crt
+
+# Sample data
+data/sample_*.tar.gz
+data/*.txt
+test_dir/
+sample_dir/
+
+# Logs
+*.log
+logs/
