--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "requests==2.32.5",
     "typer>=0.19.2",
     "uvicorn==0.38.0",
+    "terminal-bench"
 ]
 
 [project.optional-dependencies]
