--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,14 +27,13 @@ dependencies = [
     "python-dotenv==1.1.1",
     "PyYAML==6.0.3",
     "requests==2.32.5",
+    "terminal-bench",
     "typer>=0.19.2",
     "uvicorn==0.38.0",
-    "terminal-bench"
 ]
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
-full = ["terminal-bench"]
 
 [tool.setuptools.packages.find]
 where = ["."]
